Added slides URL

--- a/slides.html
+++ b/slides.html
@@ -577,6 +577,8 @@ export function foo() { };</code></pre>
     <h1>THANKS</h1>
     <br><br><br>
     <h2>Questions?</h2>
+    <br><br><br>
+    <p>Slides at <a href="https://github.com/amatiasq/requirejs-speech-amatiasq">https://github.com/amatiasq/requirejs-speech-amatiasq</a></p>
   </div>
   <aside>
     <p>Thanks for your time, I hope this help you on your development :)</p>
